# stackwatch

./: .gitignore  CLAUDE.md  PRD.md  README.md  default.cfg  eslint.config.js  floating.html  index.html  package-lock.json  package.json  run.py  setup.py  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/: App.css  App.tsx  FloatingTimer.css  FloatingTimer.tsx  floating.tsx  main.tsx  polyfills.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: floating.json
src-tauri/migrations/: 001_initial.sql  002_remove_name_field.down.sql  002_remove_name_field.up.sql
src-tauri/src/: commands.rs  database.rs  error.rs  lib.rs  main.rs  models.rs
src/components/: CurrentTask.test.tsx  CurrentTask.tsx  TaskControls.test.tsx  TaskControls.tsx  TaskStack.test.tsx  TaskStack.tsx  TaskTimer.test.tsx  TaskTimer.tsx
src/contexts/: DatabaseContext.tsx
src/db/: database.test.ts  database.ts  decorators.ts  migration.ts  temporal-helpers.ts
src/hooks/: useCurrentTime.ts  useDatabase.ts  useDatabaseContext.ts  useTaskStack.ts
src/test/: setup.ts
src/types/: broadcast.ts  temporal.d.ts
src/utils/: task.test.ts  task.ts
stackwatch/: __init__.py
stackwatch/static/css/: site.css
stackwatch/templates/: base.html  index.html  push_task.html
watchout/: __init__.py  util.py
watchout/templates/: add_task.html  base.html  index.html
