[package]
name = "stackwatch"
version = "0.1.0"
description = ""
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stackwatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.0", features = ["display", "error", "from"] }
sqlx = { version = "0.8", features = [
    "chrono",
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
